--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
         <button id="clear-history" class="clear-button">Clear Chat</button>
         <div id="chat-messages" class="messages-container"></div>
         <div class="input-container">
-            <textarea id="user-input" placeholder="Type your message..."></textarea>
-            <button id="send-button">Send</button>
+            <textarea id="user-input" placeholder="Type your message..." disabled></textarea>
+            <button id="send-button" disabled>Send</button>
         </div>
     </div>
     <script src="script.js"></script>
